# hoister

./: .dockerignore  .env.template  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  claude.md  docker-compose.cloud.yaml  docker-compose.dev.yaml  docker-compose.override.yaml  docker-compose.selfhost.yaml  docker-compose.yaml  fails.Dockerfile  justfile
.github/workflows/: build-frontend.yml  deploy.yml  docker-build-reusable.yml  docker-publish.yml  rust.yml
agent/: Cargo.toml  Dockerfile  README.md
agent/src/: cli.rs  config.rs  docker.rs  ecr.rs  main.rs  metrics.rs  monitor.rs  notifications.rs  sse.rs
controller/: Cargo.toml  Dockerfile  Dockerfile.cloud  Makefile  README.md
controller/bindings/: ContainerLogsResponse.ts  ContainerStateResponse.ts  Deployment.ts  DeploymentId.ts  DeploymentStatus.ts  LatestMetricResponse.ts  LatestMetricsResponse.ts  MetricPointResponse.ts  ServiceMetricsResponse.ts
controller/migrations/: 20260210065500_initial.sql  20260210075209_host.up.sql  20260525000000_api_token_hash.sql  20260525120000_user_id_not_null.sql  20260527000000_notifier.sql  20260528000000_user_plan.sql  20260528120000_container_state.sql  20260602120000_deployment_logs.sql
controller/migrations/postgres/: 20260210065500_initial.sql  20260210075209_host.down.sql  20260210075209_host.up.sql  20260406000000_api_token.sql  20260525000000_api_token_hash.sql  20260525120000_user_id_not_null.sql  20260526120000_api_token_multi.sql  20260527000000_notifier.sql  20260528000000_user_plan.sql  20260528120000_container_state.sql  20260601120000_container_metrics.sql  20260611000000_initial.sql  20260611120000_container_metrics_cascade.sql
controller/migrations/sqlite/: 20260210075209_host.up.sql  20260403000000_user_id.sql  20260406000000_api_token.sql  20260526000000_token_pepper.sql  20260526120000_api_token_multi.sql  20260601120000_container_metrics.sql  20260611000000_initial.sql  20260611120000_container_metrics_cascade.sql
controller/src/: authentication.rs  database.rs  lib.rs  main.rs  server.rs  sse.rs
controller/src/database/: local_sqlite.rs  postgresql.rs
controller/src/lib/: config.rs  domain.rs  inbound.rs  lib.rs  outbound.rs  sse.rs
controller/src/lib/domain/: metrics.rs  tokens.rs
controller/src/lib/domain/billing/: models.rs  ports.rs  service.rs
controller/src/lib/domain/container_state/: port.rs  service.rs
controller/src/lib/domain/container_state/models/: state.rs
controller/src/lib/domain/deployments/: ports.rs  service.rs
controller/src/lib/domain/deployments/models/: deployment.rs  service.rs
controller/src/lib/domain/metrics/: models.rs  port.rs  service.rs
controller/src/lib/domain/notifiers/: models.rs  ports.rs  service.rs
controller/src/lib/domain/tokens/: hash.rs  models.rs  ports.rs  service.rs
controller/src/lib/inbound/: audit_log.rs  notifier_validation.rs  rate_limit.rs  server.rs
controller/src/lib/outbound/: database.rs  logs_memory.rs  notification_dispatch.rs  pending_updates_memory.rs  postgresql.rs  secrets.rs  sqlite.rs  state_memory.rs
controller/tests/: server.rs
deploy/: Caddyfile  backup.sh
docs/: cloud-deploy.md  cloud-rollout.md  next-steps.md
documentation/: Dockerfile  astro.config.mjs  docker-compose.yaml  package-lock.json  package.json
documentation/public/: robots.txt
documentation/src/content/docs/: index.mdx  watchtower-alternative.md
documentation/src/pages/og/: [...slug].ts
documentation/src/plugins/: og-middleware.ts  og-plugin.ts
documentation/src/styles/: custom.css
frontend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend-cloud/: .env.example  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
frontend-cloud/src/: app.d.ts  app.html
frontend-cloud/src/bindings/: ContainerStateResponse.ts  ContainerStateResponses.ts  Deployment.ts  DeploymentId.ts  DeploymentStatus.ts  LatestMetricResponse.ts  MetricPointResponse.ts  ProjectName.ts
frontend-cloud/src/lib/: consent.svelte.ts  posthog.ts  redaction.ts  seo.ts
frontend-cloud/src/lib/api/: _headers.ts  billing.ts  deployments.ts  inspect.ts  logs.ts  me.ts  metrics.ts  notifiers.ts  pendingUpdates.ts  token.ts  tokens.ts
frontend-cloud/src/lib/components/: Carousel.svelte  CookieBanner.svelte  Deployments.svelte  InspectionCard.svelte  PendingUpdates.svelte  RedactedText.svelte  SEO.svelte  ServiceMetricsCharts.svelte  TimeSeriesChart.svelte
frontend-cloud/src/lib/server/: checkout.ts  stripe.ts
frontend-cloud/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend-cloud/src/routes/(app)/: +layout.server.ts  +layout.svelte
frontend-cloud/src/routes/containers/: +page.server.ts  +page.svelte
frontend-cloud/src/routes/dashboard/: +page.server.ts  +page.svelte
frontend-cloud/src/routes/datenschutz/: +page.svelte
frontend-cloud/src/routes/impressum/: +page.svelte
frontend-cloud/src/routes/nutzungsbedingungen/: +page.svelte
frontend-cloud/src/routes/privacy/: +page.svelte
frontend-cloud/src/routes/sitemap.xml/: +server.ts
frontend-cloud/src/routes/terms/: +page.svelte
frontend-cloud/static/: robots.txt
frontend/src/: demo.spec.ts  hooks.server.ts
frontend/src/lib/: format.ts  metrics.ts  redaction.ts
frontend/src/lib/api/: deployments.ts  deploymentsByImage.ts  inspect.ts  inspectContainer.ts  metrics.ts  pendingUpdates.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  Deployments.svelte  page.svelte.spec.ts
hoister_shared/: Cargo.toml  README.md
hoister_shared/bindings/: HostName.ts  ServiceName.ts
hoister_shared/src/: lib.rs  wire.rs
scripts/: check-untracked-sources.sh
shared/: Cargo.toml
shared/src/: lib.rs
src/: cli.rs  docker.rs  main.rs  notifications.rs  persistence.rs
test/: docker-compose.multi-agent.yaml  fails.Dockerfile  hoister.service  run-multi-project.sh  works.Dockerfile
test/compose/: project-api.yaml  project-web.yaml  shared.yaml
(+64 files in other folders)
