[package]
name = "hoister"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "simple continuous CD container upgrades"
repository = "https://github.com/HerrMuellerluedenscheid/hoister"
authors = ["marius.kriegerowski@gmail.com"]

[dependencies]
bollard = { git = "https://github.com/fussybeaver/bollard.git" , rev = "50a25a0d81bf7b9085a69e6b5bfb56a28855f158"}
futures-util = "0.3.31"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.27"
env_logger = "0.11.8"
serde_json = "1.0.140"
thiserror = "2.0.12"
clap = { version = "4.5.37", features = ["string"] }
ctrlc = "3.4"
libc = "0.2.172"
chatterbox = {path = "../chatterbox"}
