
[workspace]
resolver = "3"
members = [
    "agent",
    "controller", "hoister_shared",
]

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros", "full"] }
log = "0.4.28"
env_logger = "0.11.8"
bollard = { version = "0.19.3", features = ["rustls"] }
chatterbox = { version = "2.3.1"}
figment2 = { version = "0.11.4", features = ["toml"] }
serde = { version = "1.0.228" }
