[package]
name = "hoister"
version = "1.1.0"
edition = "2024"
license = "MIT"
description = "simple continuous CD container upgrades"
repository = "https://github.com/HerrMuellerluedenscheid/hoister"
authors = ["marius.kriegerowski@gmail.com"]

[dependencies]
tokio = {workspace = true}
log = {workspace = true}
env_logger = { workspace = true }
bollard = {workspace = true}
chatterbox = {workspace = true}
controller = {path = "../controller"}
shared = {path = "../shared"}
futures-util = "0.3.31"
serde_json = "1.0.140"
thiserror = "2.0.12"
clap = { version = "4.5.37", features = ["string"] }
ctrlc = "3.4"
libc = "0.2.172"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls-webpki-roots", "json", "stream"] }
tokio-stream = "0.1.17"
lazy_static = "1.5.0"
chrono = "0.4.41"
serde = { version = "1.0.228", features = ["derive"] }
