[package]
name = "hoister"
version = "1.1.0"
edition = "2024"
license = "MIT"
description = "simple continuous CD container upgrades"
repository = "https://github.com/HerrMuellerluedenscheid/hoister"
authors = ["marius.kriegerowski@gmail.com"]

[dependencies]
tokio = {workspace = true}
log = {workspace = true}
env_logger = { workspace = true }
bollard = {workspace = true}
chatterbox = {workspace = true}
figment2 = { workspace = true }

controller = {path = "../controller"}
shared = {path = "../shared"}

futures-util = "0.3.31"
serde_json = "1.0.140"
thiserror = "2.0.12"
ctrlc = "3.4"
libc = "0.2.172"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls-webpki-roots", "json", "stream"] }
tokio-stream = "0.1.17"
chrono = "0.4.41"
serde = "1.0.228"
url = "2.5.7"

[dev-dependencies]
figment2 = { workspace = true, features = ["toml", "test"] }
