
[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[lib]
name = "controller"
path = "src/lib/lib.rs"

[[bin]]
name = "controller"
path = "src/bin/main.rs"

[dependencies]
tokio = {workspace = true}
log = {workspace = true}
env_logger = { workspace = true }
bollard = { workspace = true }
serde = {workspace = true}
figment2 = {workspace = true}

hoister_shared = { path = "../hoister_shared" }

thiserror = "2.0.16"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
axum = { version = "0.8.4", features = ["json"] }
http = "1.3.1"
serde_json = "1.0"
ts-rs = "11.0.1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.31"
async-stream = "0.3.6"
tracing = "0.1.44"

[dev-dependencies]
tower = "0.5.2"
