[package]
name = "hoister_shared"
version = "0.1.0"
edition = "2024"
description = "shared components use accross the hoister system"
license = "MIT"

[dependencies]
serde = {workspace = true}
ts-rs = "11.0.1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
chatterbox = {workspace = true}
